--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.0.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
     "next": "^14.0.0",
-    "next-auth": "^4.24.0",
+    "next-auth": "^4.24.11",
     "prisma": "^5.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
