feat: Add comprehensive import/export functionality and security enhancements
✨ New Features:
- Add GET /api/cards/export endpoint for admin card backup
- Add POST /api/cards/import endpoint with upsert logic (ID/title matching)
- Implement Sharp-based image processing for secure icon uploads
- Add import/export buttons to admin interface with toast notifications

🔒 Security Improvements:
- Implement strict Content Security Policy (CSP) headers
- Enhanced image upload validation (PNG/JPEG/WebP, max 2MB)
- EXIF data stripping for privacy protection
- Automatic old icon cleanup and file management

🖼️ Image Processing:
- Convert all uploads to optimized PNG format
- Resize images to 128x128px with high compression
- Support for PNG, JPEG, and WebP input formats
- Professional-grade image processing with Sharp library

🎨 UI Enhancements:
- Import/export buttons in main admin and card manager views
- File input handling for JSON uploads
- Success/error toast notifications with detailed counts
- Responsive button layout with consistent styling

📚 Documentation:
- Updated README with import/export usage instructions
- Added API reference section for new endpoints
- Documented security features and CSP implementation
- Added file upload and image processing documentation

🔧 Technical Improvements:
- Enhanced middleware with different CSP policies for admin/public
- Improved error handling and validation
- Automatic file cleanup and storage management
- Type-safe implementation with comprehensive error handling

This commit significantly enhances the Lab Portal's functionality,
security, and user experience while maintaining backward compatibility.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/sharp": "^0.32.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -37,6 +38,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.45.0",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.0"
   },
