feat: Complete status indicator system and testing framework
- Implement comprehensive real-time status monitoring system
  * 10-second polling interval for responsive updates
  * Visual status indicators (Up/Down/Loading/Unknown)
  * Smart caching and timeout handling
  * Localhost optimization and error handling
  * Database integration with CardStatus model

- Add comprehensive testing framework
  * Jest configuration with TypeScript support
  * Test utilities and setup files
  * Component tests for LabCard and StatusIndicator
  * API endpoint tests for cards and status
  * Admin login page tests
  * Middleware tests

- Update documentation and project status
  * Consolidate implementation details into PROJECT_STATUS.md
  * Remove duplicate IMPLEMENTATION_SUMMARY.md
  * Add testing documentation (TESTING.md)
  * Update package.json with testing dependencies

- Performance and reliability improvements
  * Optimize status checking from 30s to 10s intervals
  * Enhanced error handling and user feedback
  * Improved TypeScript configuration
  * Better middleware security

Status: Lab Portal is now fully functional with real-time service monitoring

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "prisma:generate": "dotenv -e .env.local -- prisma generate",
     "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "prisma:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
@@ -43,6 +47,10 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -50,6 +58,8 @@
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
+    "jest": "^30.1.2",
+    "jest-environment-jsdom": "^30.1.2",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
