--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "bugs": {
     "url": "https://github.com/zjgordon/labPortal/issues"
   },
