📚 Major Documentation Reorganization and Professional Structure
🎯 Complete documentation reorganization with professional architecture:

🏗️ **New Documentation Structure**
- Created organized docs/ directory with logical categories:
  - docs/architecture/ - System design and FSM documentation
  - docs/api/ - Complete API reference (5 files)
  - docs/agent/ - Agent setup and configuration (4 files)
  - docs/ops/ - Operations and deployment (7 files)
  - docs/dev/ - Development and testing (3 files)
  - docs/ - Additional resources and main index

📖 **Documentation Landing Page**
- Created docs/index.md with comprehensive table of contents
- Organized navigation by topic and purpose
- Professional presentation with clear categories

🔗 **Link Management and Quality Assurance**
- Updated all 35 internal cross-references to new locations
- Enhanced README.md with organized Documentation section
- Created scripts/check-links.js for automated link validation
- Verified zero broken links across all documentation

📁 **File Organization**
- Moved 22 documentation files to organized structure
- Preserved README.md and PROJECT_STATUS.md at root level
- Organized Docker files, scripts, and configuration docs
- Maintained all existing content with improved structure

🚀 **Benefits**
- Professional repository presentation
- Easy navigation for users and contributors
- Maintainable structure for future updates
- GitHub-optimized with working links
- Enterprise-grade documentation organization

✅ **Quality Assurance**
- All links verified working
- Consistent structure across categories
- Clear navigation patterns
- Professional appearance and organization

This reorganization transforms the Lab Portal from scattered documentation to a cohesive, professional documentation system that matches its enterprise-grade functionality.

--- a/agent-skeleton/env.example
+++ b/agent-skeleton/env.example
@@ -13,5 +13,11 @@ AGENT_TOKEN=your-agent-token-here
 # Polling interval in milliseconds (default: 4000 = 4 seconds)
 POLL_INTERVAL=4000
 
+# Command execution timeout in milliseconds (default: 60000 = 60 seconds)
+EXEC_TIMEOUT_MS=60000
+
+# Number of retry attempts for restart failures (default: 1)
+RESTART_RETRY=1
+
 # Environment (development/production)
 NODE_ENV=production
