--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Portal and control plane for local network laboratories.",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
+    "format": "prettier --check .",
+    "format:write": "prettier --write .",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -58,9 +62,12 @@
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
+    "husky": "^9.1.7",
     "jest": "^30.1.2",
     "jest-environment-jsdom": "^30.1.2",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.0",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.5",
@@ -73,6 +80,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{md,json,yml,yaml}": [
+      "prettier --write"
+    ]
+  },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
