feat: add automated safety nets with CI, CodeQL, Dependabot, and link checking

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
+    "docs:check": "node scripts/check-links.js",
     "prisma:generate": "dotenv -e .env.local -- prisma generate",
     "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "prisma:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
@@ -62,6 +63,7 @@
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
+    "glob": "^8.1.0",
     "husky": "^9.1.7",
     "jest": "^30.1.2",
     "jest-environment-jsdom": "^30.1.2",
