feat: Add comprehensive appearance management system
- Add admin appearance management interface
- Implement appearance configuration API endpoints
- Add admin authentication system with role-based access
- Create configuration management with validation
- Update database schema for appearance settings
- Add comprehensive documentation and tests
- Update project status and environment configuration

--- a/env.example
+++ b/env.example
@@ -22,3 +22,7 @@ EXEC_TIMEOUT_MS="60000"
 
 # Admin Cron/Prune Management (Server Secret)
 ADMIN_CRON_SECRET="your-server-secret-here"
+
+# Appearance Configuration
+APPEARANCE_INSTANCE_NAME="My Lab"
+APPEARANCE_HEADER_TEXT="Welcome to the Home Lab"
