--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "labportal",
-  "version": "1.0.0",
+  "version": "0.2.0-alpha",
   "description": "Portal and control plane for local network laboratories.",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
     "docs:check": "node scripts/check-links.js",
+    "reset:clean": "rm -rf node_modules prisma/dev.db && npm ci && npx prisma generate && npx prisma migrate deploy",
     "prisma:generate": "dotenv -e .env.local -- prisma generate",
     "prisma:migrate": "dotenv -e .env.local -- prisma migrate dev",
     "prisma:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
