--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Database
 DATABASE_URL="file:./dev.db"
 
-# NextAuth
+# NextAuth Authentication
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here"
 
@@ -11,18 +11,27 @@ ADMIN_PASSWORD="your-admin-password"
 # Portal Configuration
 PUBLIC_BASE_URL="http://localhost:3000"
 
+# Status Monitoring
+STATUS_SWEEPER_ENABLED="true"
+
+# Control Plane Features (Experimental)
+ENABLE_CONTROL_PLANE="false"
+
 # Public API Access (Grafana/Readers)
 READONLY_PUBLIC_TOKEN="your-public-readonly-token-here"
 
 # Local Action Execution (Systemctl)
 HOST_LOCAL_ID="local"
 ALLOW_SYSTEMCTL="false"
-UNIT_ALLOWLIST_REGEX="^([a-z0-9@._-]+)\\.service$"
+UNIT_ALLOWLIST_REGEX="^([a-z0-9@._-]+)\\\\.service$"
 EXEC_TIMEOUT_MS="60000"
 
 # Admin Cron/Prune Management (Server Secret)
 ADMIN_CRON_SECRET="your-server-secret-here"
 
+# CSRF Protection & Security
+ADMIN_ALLOWED_ORIGINS="http://localhost:3000,https://portal.yourdomain.com"
+
 # Appearance Configuration
-APPEARANCE_INSTANCE_NAME="My Lab"
-APPEARANCE_HEADER_TEXT="Welcome to the Home Lab"
+APPEARANCE_INSTANCE_NAME="Lab Portal"
+APPEARANCE_HEADER_TEXT="Lab Portal"
