--- a/env.example
+++ b/env.example
@@ -15,6 +15,8 @@ PUBLIC_BASE_URL="http://localhost:3000"
 STATUS_SWEEPER_ENABLED="true"
 
 # Control Plane Features (Experimental)
+# Note: This environment variable is now deprecated. Use the "Experimental Features" 
+# toggle in the admin dashboard instead. This variable serves as a fallback only.
 ENABLE_CONTROL_PLANE="false"
 
 # Public API Access (Grafana/Readers)
