feat: Complete Agent & Tooling Improvements Sprint
Sprint 20: Agent & Tooling Improvements - All 5 sessions completed

🔧 Guided Installer Development:
- Complete TUI/text installer with ncurses UI and fallback
- Root privilege checking, OS detection, and dependency management
- Comprehensive configuration collection and validation
- Safe installation with proper user creation and permissions
- Systemd service creation, validation, and heartbeat testing
- Full lifecycle management (install, upgrade, uninstall, monitor)
- Optional sudoers helper with validation

🚀 Onboarding Experience Enhancement:
- Enhanced admin hosts modal with copy-to-clipboard functionality
- Smart tarball detection and download capabilities
- QR code integration with real QR code generation
- Comprehensive TUI and CLI command sections
- New API endpoints for tarball management and install script serving
- Mobile-friendly QR code setup for agent configuration

🎨 UI/UX Polish & Styling Improvements:
- Enhanced 'No Lab Tools Available' empty state styling
- Fixed hard-to-read text contrast and typography issues
- Updated Admin Access button to match header Admin button styling
- Improved visual hierarchy and spacing for better UX
- Maintained consistent cyberpunk theme throughout interface

🔐 GPG Signing Preparation:
- Added agent-sign Makefile target for GPG signing
- Comprehensive GPG signing workflow with error handling
- Enhanced documentation with complete GPG verification instructions
- Updated .gitignore to exclude GPG signature files
- Optional security enhancement for agent packages

📚 Documentation & Infrastructure:
- Complete installation documentation with TUI and CLI flows
- Public API documentation for new endpoints
- CI/CD integration with shellcheck and dry-run testing
- Professional-grade installer with comprehensive error handling
- Enhanced security with proper user isolation and validation

Key Features Added:
- Professional agent installer with full lifecycle management
- Copy

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,12 @@ jspm_packages/
 # output of 'npm pack'
 *.tgz
 
+# checksum files for agent tarballs
+*.sha256
+
+# GPG signature files for agent tarballs
+*.asc
+
 # Yarn Integrity file
 .yarn-integrity
 
