--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toast": "^1.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/qrcode": "^1.5.5",
     "@types/sharp": "^0.32.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.0",
@@ -44,6 +45,7 @@
     "next": "^14.0.0",
     "next-auth": "^4.24.11",
     "prisma": "^5.0.0",
+    "qrcode": "^1.5.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.45.0",
